--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -3,8 +3,9 @@ FROM node:23-alpine
 WORKDIR /app
 
 COPY package.json package-lock.json* ./
+RUN npm install
+# RUN npm install lightningcss-linux-arm64-musl
 
-RUN npm ci
 
 COPY . .
 
