--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,11 +1,10 @@
-FROM node:23-alpine
+FROM node:22-alpine
 
 WORKDIR /app
 
-COPY package.json package-lock.json* ./
+COPY package.json package-lock.json ./
 RUN npm install
-# RUN npm install lightningcss-linux-arm64-musl
-
+RUN npm install @tailwindcss/oxide-linux-arm64-musl
 
 COPY . .
 
