--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -40,4 +40,4 @@ EXPOSE 8000
 
 USER nonroot
 
-CMD ["/usr/local/bin/uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["/usr/local/bin/uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
