--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,20 +6,25 @@ services:
     build:
       context: ./backend
       dockerfile: ./Dockerfile
+      target: developer
     ports:
       - "8000:8000"
     volumes:
       - ./backend:/app
     env_file:
       - ./backend/.env
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/app/credential.json
     networks:
       - readum-network
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
 
   frontend:
     container_name: readum-frontend
     build:
       context: ./frontend
-      dockerfile: ./Dockerfile.dev
+      dockerfile: ./Dockerfile
+      target: developer
     ports:
       - "3000:3000"
     volumes:
