--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,12 @@
+# For development environment
+FROM node:22-alpine AS developer
+WORKDIR /app
+COPY package.json package-lock.json ./
+RUN npm install
+RUN npm install @tailwindcss/oxide-linux-arm64-musl
+COPY . .
+CMD ["npm", "run", "dev"]
+
 # Install dependencies only when needed
 FROM node:22-alpine AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
