[fix] dockerfile configuration

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,6 +26,10 @@ RUN pip install pipenv
 COPY Pipfile Pipfile.lock ./
 RUN pipenv install --dev --system --deploy
 
+RUN mkdir -p /app/assets/tmp/faiss && \
+    chmod -R 755 /app/assets && \
+    chown -R 1000:1000 /app/assets
+
 COPY . .
 
 # 最終用ステージ
@@ -37,7 +41,8 @@ COPY --from=builder /usr/local/lib/python3.11 /usr/local/lib/python3.11
 COPY --from=builder /usr/local/bin /usr/local/bin
 
 ENV PYTHONPATH=/usr/local/lib/python3.11/site-packages
-COPY --from=builder /app/src .
+COPY --from=builder /app .
+COPY --from=builder --chown=nonroot:nonroot /app .
 
 EXPOSE 8000
 
