--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -57,11 +57,7 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
-EXPOSE 3000
+ENV PORT 8080
+EXPOSE ${PORT}
 
-ENV PORT 3000
-
-# server.js is created by next build from the standalone output
-# https://nextjs.org/docs/pages/api-reference/config/next-config-js/output
-ENV HOSTNAME="0.0.0.0"
-CMD ["node", "server.js"]
+CMD HOSTNAME="0.0.0.0" node server.js
