--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -24,12 +24,12 @@ jobs:
         run: pip install pipenv
 
       - name: Install dependencies
-        working-directory: ./backend
+        working-directory: backend
         run: pipenv install --dev
 
       - name: Run tests
-        working-directory: ./backend
-        run: pipenv run pytest
+        working-directory: backend
+        run: pipenv run pytest --cov
 
       - name: Set up GCP authentication
         uses: google-github-actions/setup-gcloud@v2
@@ -46,7 +46,7 @@ jobs:
           rm gcp-key.json
 
       - name: Build and push Docker image
-        working-directory: ./backend
+        working-directory: backend
         run: |
           docker build --platform linux/amd64 -t asia-northeast1-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/readum-repo/readum-backend:${{ github.sha }} .
           docker push asia-northeast1-docker.pkg.dev/${{ vars.GCP_PROJECT_ID }}/readum-repo/readum-backend:${{ github.sha }}
