--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -5,9 +5,10 @@ on:
     branches: [main]
     paths:
       - "backend/**"
+  workflow_dispatch:
 
 jobs:
-  test-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,17 +20,6 @@ jobs:
           python-version: "3.11"
           cache: "pipenv"
           cache-dependency-path: backend/Pipfile.lock
-
-      - name: Install pipenv
-        run: pip install pipenv
-
-      - name: Install dependencies
-        working-directory: backend
-        run: pipenv install --dev
-
-      - name: Run tests
-        working-directory: backend
-        run: pipenv run pytest --cov
 
       - name: Set up GCP authentication
         uses: google-github-actions/setup-gcloud@v2
